--- a/src/pages/companypage.css
+++ b/src/pages/companypage.css
@@ -101,20 +101,85 @@ color: #030640;
     width: 527px;
 height: 418px;
 position: relative;
+/* display: none; */
 }
 .shoeimage{
     background: url("shoes.png");
     background-repeat: no-repeat;
-    border: 3px solid #1A2D57;
+    /* border: 3px solid #1A2D57; */
    /* border:1px solid  #1A2D57; */
    width: 486px;
    height: 384px;
    position: absolute;
-    left: 3px;
-top: 70.59px;
+    left: -22px;
+top: 72.59px;
 }
 .shoeimage-container{
+    background: rgba(241, 250, 255, 0.06);
+    width: 490px;
+   height: 390px;
+position: absolute;
+left: -35px;
+top: 60.59px;
+}
+.security{
+    position: absolute;
+width: 120px;
+height: 48px;
+right: 483px;
+top: 132.44px;
+
+background: #FFFFFF;
+/* Drop Shadow 2 */
+
+box-shadow: -5px 0px 32px rgba(155, 155, 155, 0.25);
+border-radius: 6px;
+
+}
+.security h1{
+    font-family: 'Cabin';
+font-style: normal;
+font-weight: 700;
+font-size: 16px;
+line-height: 32px;
+/* identical to box height, or 200% */
+padding-top: .5rem;
+padding-left: 2rem;
+/* display: flex;
+align-items: center; */
+letter-spacing: -0.01em;
+
+color: #030640;
+
+}
+.flexibiliy{
+    position: absolute;
+    width: 150px;
+    height: 48px;
+    left: 161px;
+    top: 428px;
     
+    background: #FFFFFF;
+    /* Drop Shadow 2 */
+    
+    box-shadow: -5px 0px 32px rgba(155, 155, 155, 0.25);
+    border-radius: 6px; 
+}
+.flexibiliy h1{
+    font-family: 'Cabin';
+font-style: normal;
+font-weight: 700;
+font-size: 16px;
+line-height: 32px;
+/* identical to box height, or 200% */
+padding-top: .5rem;
+padding-left: 2rem;
+/* display: flex;
+align-items: center; */
+letter-spacing: -0.01em;
+
+color: #030640;
+
 }
 /* .shoe-image{
     width: 465px;
@@ -126,6 +191,7 @@ top: 70.59px;
     display: grid;
     grid-template-columns: 1fr 1fr ;
     gap: 30px;
+    margin-top: 56px;
 }
 .dates div{
     background-color: 
@@ -186,8 +252,100 @@ font-weight: 400;
 font-size: 18px;
 line-height: 32px;
 /* or 178% */
-
+width: 401px;
+height: 64px;
 
 color: #FFFFFF;
 
+}
+
+.company4{
+    max-width: 1200px;
+    margin: 220px auto;
+    
+}
+.company4-text h1{
+    font-family: 'Cabin';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 37px;
+    line-height: 65px;
+    /* identical to box height, or 176% */
+    
+    display: flex;
+    align-items: center;
+    
+    color: #030640;
+    
+    
+}
+.company4-text p{
+    font-family: 'Cabin';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 32px;
+    /* or 133% */
+    padding: 1rem 0;
+    width: 833px;
+    /* height: 207px; */
+    color: rgba(51, 51, 51, 0.9);
+    
+}
+.executives{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-row-gap: 200px;
+    justify-items: center;
+    position: relative;
+    margin-top: 92px;
+}
+.executives h3{
+    font-family: 'Cabin';
+font-style: normal;
+font-weight: 700;
+font-size: 21px;
+line-height: 40px;
+/* identical to box height, or 190% */
+
+text-align: center;
+letter-spacing: 0.2px;
+
+color: #030640;
+}
+.executives p{
+    font-family: 'Cabin';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 19px;
+text-align: center;
+
+color: rgba(51, 51, 51, 0.86);
+
+}
+.executives div{
+    background: url('Line.png');
+    background-repeat: no-repeat;
+    width: 297.85px;
+    height: 258.7px;
+}
+.fp{
+    justify-self: flex-start;
+}
+.bg{
+    justify-self: flex-end;
+}
+.gog{
+    position: absolute;
+    top: 120px;
+}
+.company5{
+    margin-bottom: 180px;
+    /* background: url('family.png');
+    background-repeat: no-repeat;
+    width: 1440px; */
+}
+.company5 img{
+    width: 100%;
 }
