--- a/src/text-image.css
+++ b/src/text-image.css
@@ -40,3 +40,19 @@ color: rgba(51, 51, 51, 0.9);
 .text-image-1-2 img{
     width: 100%;
 }
+.button{
+    padding: 14px 20px;
+gap: 10px;
+width: 220px;
+height: 56px;
+background: #6200F0;
+border-radius: 6px;
+font-family: 'Cabin';
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 19px;
+
+color: #FFFFFF;
+
+}
