--- a/src/pages/partnership.css
+++ b/src/pages/partnership.css
@@ -127,7 +127,7 @@ height: 692px;
 left: 220px;
 top: 1353px;
 
-background: #FFFFFF;
-box-shadow: 0px 10px 35px rgba(0, 0, 0, 0.03);
-border-radius: 8px;
+/* background: #FFFFFF; */
+/* box-shadow: 0px 10px 35px rgba(0, 0, 0, 0.03); */
+/* border-radius: 8px; */
 }
